Revision history for Calendar-List
==================================

1.01    2019-08-27
        - Tidy up pod
          PR #1 from Mohammad S Anwar
          https://github.com/barbie/calendar-list/pull/1

1.00    2019-08-26
        - fixes suggested by Kritika.io.
        - test improvements suggesed via coveralls.io.

0.28    2014-10-05
        - fixed maxcount setting when options and end date are both used.
          (RT#99247, thanks to Slaven Rezić).

0.27    2014-10-01
        - fixed license fields in META.json to be lists.
        - extended META and functional test suites.
        - compare_dates and encode_date undefined logic reworked.
        - reformat_date day/month/year validation must be numeric.
        - fixed DDEXT and dotw bugs.
        - simplified logic for holidays and exclusions.
        - SELECTED now switched to XHTML format of selected="selected".
        - added support for excluding full months.
        - added tests for list function coverage.

0.26    2012-11-18
        - change file dates changed to meet W3CDTF standards.
        - test file updates.

0.25    2012-04-29
	    - added minimum perl version (5.006).
	    - META tests no longer require specific versions.
	    - spelling fix. (thanks to Florian Schlichting & Gregor Herrmann).

0.24    2012-04-15
	    - removed debugging lines.

0.23    2012-04-15
        - update META.yml to prevent TestData.pm from being indexed.
        - License updated to Artistic License v2.0.
        - removed Artistic file.
        - added META.json and test script.

0.22    2009-18-18
        - added more tests
        - updated documentation.
        - Due to previous rewrite, all versions of DateTime are now supported.

0.21    2008-06-02
        - updated META.yml to correctly include DateTime optional prerequisite.
        - added dubious TestData to META.yml to see how PAUSE and CPANTS 
          respond. This is dubious because TestData.pm is provided in the 