@@ -473,6 +473,16 @@ of 1st January 1902 to 31st December 2037 are passed, an undef is returned.
 
 =head1 SEE ALSO
 
+=head2 Further Modules
+
+=over 4
+
+=item L<Calendar::List>
+
+=back
+
+=head2 Date/Time Modules
+
 =over 4
 
 =item L<Date::ICal>
@@ -485,8 +495,20 @@ of 1st January 1902 to 31st December 2037 are passed, an undef is returned.
 
 =back
 
-  The Calendar FAQ at http://www.tondering.dk/claus/calendar.html
+=head2 Further Information
 
+=over 4
+
+=item L<The Calendar FAQ>
+
+L<http://www.tondering.dk/claus/calendar.html>
+
+=item L<The Perl Advent Entry>
+
+2018-12-01 : L<http://perladvent.org/2018/2018-12-01.html>
+
+=back
+  
 =head1 BUGS, PATCHES & FIXES
 
 There are no known bugs at the time of this release. However, if you spot a
